testsuite/tests/parse-errors/unclosed_sig.compilers.reference
File "unclosed_sig.mli", line 10, characters 0-0:
Error: Syntax error: 'end' expected
File "unclosed_sig.mli", line 8, characters 11-14:
8 | module M : sig
               ^^^
  This 'sig' might be unmatched
